adding landing page text and button, button routing to sign-up page

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,3 @@
-<h1>Welcome to your laundry-room</h1>
+<h1>Welcome to your laundry-room</h1><br>
+<h4>Book, change and communicate about your laundry time<h4><br>
+<button><%= link_to 'Sign-up', new_user_registration_path, id: "btn", class: "bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 m-6 rounded content-center" %></button>
