--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,6 @@
-<h1>Welcome to your laundry-room</h1><br>
-<h4>Book, change and communicate about your laundry time<h4><br>
-<button><%= link_to 'Sign-up', new_user_registration_path, id: "btn", class: "bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 m-6 rounded content-center" %></button>
+<section class="masthead">
+    <h1 class="heading">WELCOME TO YOUR LAUNDRY-ROOM</h1><br>
+    <h2 class="paragraph">Book, change and communicate about your laundry time<h4><br>
+    <form action="users/sign_up" method="get">
+        <button class="bg-transparent hover:bg-white text-white font-semibold hover:text-blue-dark py-2 px-4 border border-blue hover:border-transparent rounded-full text-center sign-up">Sign-up</button>
+    </form>
