--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,67 @@
-<h2>Sign up</h2>
+<form class="w-full max-w-sm">
+    <h2 class="text-center text-teal mt-2">Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :given_name %><br />
-    <%= f.text_field :given_name, autofocus: true, autocomplete: "Given name" %>
-  </div>
+    <div class="field flex flex-col mb-4">
+      <%= f.label :given_name, class: "uppercase font-bold text-lg text-grey-darkest" %> <br />
+      <%= f.text_field :given_name, class: "border py-2 px-3 text-grey-darkest" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :family_name %><br />
-    <%= f.text_field :family_name, autofocus: true, autocomplete: "Given name" %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field flex flex-col mb-4">
+      <%= f.label :family_name, class: "uppercase font-bold text-lg text-grey-darkest" %> <br />
+      <%= f.text_field :family_name, class: "border py-2 px-3 text-grey-darkest" %>
+    </div>
+    
+    <div class="field flex flex-col mb-4">
+      <%= f.label :email, class: "uppercase font-bold text-lg text-grey-darkest" %><br />
+      <%= f.email_field :email, class: "border py-2 px-3 text-grey-darkest" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="field flex flex-col mb-4">
+      <%= f.label :password, class: "uppercase font-bold text-lg text-grey-darkest" %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
+      <%= f.password_field :password, class: "border py-2 px-3 text-grey-darkest" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="field flex flex-col mb-4">
+      <%= f.label :password_confirmation, class: "mb-2 uppercase font-bold text-lg text-grey-darkest" %><br />
+      <%= f.password_field :password_confirmation, class: "border py-2 px-3 text-grey-darkest" %>
+    </div>
 
-  <div class="actions">
-    <button><%= f.submit "Sign up" %></button>
+    <div class="actions">
+      <%= f.submit "Create Account", class: "block bg-teal hover:bg-teal-dark text-white uppercase text-lg mx-auto p-4 rounded-full" %>
+    </div>
   </div>
-<% end %>
+    <% end %>
+</form>
 
 <%= render "devise/shared/links" %>
+<%# 
+<form class="w-full max-w-sm">
+  <div class="flex flex-col mb-4">
+    <label class="mb-2 uppercase font-bold text-lg text-grey-darkest" for="first_name">First Name</label>
+    <input class="border py-2 px-3 text-grey-darkest" type="text" name="first_name" id="first_name">
+  </div>
+  <div class="flex flex-col mb-4">
+    <label class="mb-2 uppercase font-bold text-lg text-grey-darkest" for="last_name">Last Name</label>
+    <input class="border py-2 px-3 text-grey-darkest" type="text" name="last_name" id="last_name">
+  </div>
+  <div class="flex flex-col mb-4">
+    <label class="mb-2 uppercase font-bold text-lg text-grey-darkest" for="email">Email</label>
+    <input class="border py-2 px-3 text-grey-darkest" type="email" name="email" id="email">
+  </div>
+  <div class="flex flex-col mb-6">
+    <label class="mb-2 uppercase font-bold text-lg text-grey-darkest" for="password">Password</label>
+    <input class="border py-2 px-3 text-grey-darkest" type="password" name="password" id="password">
+  </div>
+  <div class="flex flex-col mb-6">
+    <label class="mb-2 uppercase font-bold text-lg text-grey-darkest" for="password">Password confirmation</label>
+    <input class="border py-2 px-3 text-grey-darkest" type="password" name="password_confirmation" id="password_confirmation  ">
+  </div>
+  <button class="block bg-teal hover:bg-teal-dark text-white uppercase text-lg mx-auto p-4 rounded" type="submit">Create Account</button>
+  <a class="block w-full text-center no-underline text-sm text-grey-dark hover:text-grey-darker" href="/login">Already have an account?</a>
+</form> %>
