--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,7 +1,8 @@
-<%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
-<% end -%>
-
+<form class="w-full max-w-sm">
+  <%- if controller_name != 'sessions' %>
+    <%= link_to "Already have an account?", new_session_path(resource_name), class: " mt-1 block w-full text-center no-underline text-sm text-grey-dark hover:text-grey-darker" %><br />
+  <% end -%>
+</form>
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <%= link_to "Sign up", new_registration_path(resource_name) %><br />
 <% end -%>
