installing tailwind and webpack gems

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,11 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <%= stylesheet_pack_tag    'application' %> 
+    <%= javascript_pack_tag    'application' %>  
     <%= stylesheet_link_tag      'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= favicon_link_tag asset_path('favicon.png') %>
-    <%# Image: <a href="https://www.freepik.com/free-vector/laundry-logo-with-text-space-for-your-slogan_1228251.htm">Designed by Gordoba</a> %>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
 
   </head>
 
