--- a/app/assets/stylesheets/landing_page.scss
+++ b/app/assets/stylesheets/landing_page.scss
@@ -17,9 +17,10 @@
   }
 
 .heading {
-    margin-top: 5vh;
+    margin-top: 15vh;
     color: white;
     background: rgba(0,0,0,0.5);
+    size: 7rem;
     font-size: 5rem;
     font-weight: normal;
     text-align: center;
@@ -35,6 +36,7 @@
 
 .sign-up {
     font-size: 1.5rem;  
+    color: white;
     width: 8vw;
     margin: 50px auto;
     display: block;
