--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <section class="masthead">
     <h1 class="heading">WELCOME TO YOUR LAUNDRY-ROOM</h1><br>
     <h2 class="paragraph">Book, change and communicate about your laundry time<h4><br>
-    <div id="user-form"></div>
-    </form> %>
-    <%= link_to 'Sign up', new_user_registration_path, remote: true, class: "bg-transparent hover:bg-white text-white font-semibold hover:text-blue-dark py-2 px-4 border border-blue hover:border-transparent rounded-full text-center sign-up" %>
+    <div id="user-forms"></div>
+    <%= link_to 'Sign up', new_user_registration_path, class: "bg-transparent hover:bg-white text-white font-semibold hover:text-blue-dark py-2 px-4 border border-blue hover:border-transparent rounded-full text-center sign-up", remote: true %>
+</section>
