--- a/app/views/partials/_signup.html.erb
+++ b/app/views/partials/_signup.html.erb
@@ -1,5 +1,5 @@
 <% content_for :modal_content do %>
-    <form class="w-full max-w-sm">
+    <form class="max-w-sm bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <h2 class="text-center text-teal mt-2">Sign up</h2>
 
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -40,5 +40,4 @@
         <% end %>
     </form>
 <% end %>
-
-<%= render "devise/shared/links" %>
+<%= render partial: 'partials/modal' %>
